--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DANI'S </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" >
-    <link rel="stylesheet" href="res.css">
+    <link rel="stylesheet" href="style.css">
     <!-- google font linl -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" >
@@ -491,7 +491,7 @@ function sendToWhatsApp() {
 // }
   
 </script>
-<script src="res.js"></script>
+<script src="script.js"></script>
 
 
 
